@@ -31,6 +31,7 @@ Misc:
  - GB Memory: Initialize RAM pattern for GBC
  - GB Video: Improved video timings
  - All: Split out install locations for Libretro and OpenEmu
+ - Qt: Manage window sizes slightly better
 
 0.5.0: (2016-09-19)
 Features:
